# rdwfrdwfdes

./: .gitignore
eden-ps5/: BUILDING_PS5.md  CMakeLists_PS5.txt  README_PS5.md  build_ps5_pkg.sh
eden-ps5/src_ps5/: CMakeLists.txt
eden-ps5/src_ps5/etahen_integration/: CMakeLists.txt  etahen_plugin.cpp  etahen_plugin.h
eden-ps5/src_ps5/main_ps5/: CMakeLists.txt  main.cpp  ps5_application.cpp  ps5_application.h
eden-ps5/src_ps5/ps5_audio/: CMakeLists.txt  ps5_audio_manager.cpp  ps5_audio_manager.h
eden-ps5/src_ps5/ps5_graphics/: CMakeLists.txt  gnm_wrapper.cpp  gnm_wrapper.h  ps5_renderer.cpp  ps5_renderer.h
eden-ps5/src_ps5/ps5_input/: CMakeLists.txt  ps5_input_manager.cpp  ps5_input_manager.h
eden-ps5/src_ps5/ps5_platform/: CMakeLists.txt  ps5_system.cpp  ps5_system.h
frontend/: .env
